Inserção de códigos de critérios básicos html Alterações no README

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,28 @@
 </head>
 
 <body>
+  <header>
+    <h1>Analisador de texto</h1>
+  </header>
+
+  <textarea name="user-input">Digite seu texto aqui</textarea>
+
+  <ul>
+    <li data-testid="word-count"></li>
+    <li data-testid="character-count"></li>
+    <li data-testid="character-no-spaces-count"></li>
+    <li data-testid="number-count"></li>
+    <li data-testid="number-sum"></li>
+    <li data-testid="word-lenght-average"></li>
+  </ul>
+
+  <button id="reset-button">Limpar texto</button>
+
+  <footer>
+    <p>Desenvolvido pela estudante Débora "Nirvi" Viveiros para o Bootcamp da Laboratória em dezembro de 2023.</p>
+  </footer>
+
   <script src="index.js" type="module"></script>
 </body>
+
 </html>
