Códigos HTML e CSS + início JS

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
 
   <textarea name="user-input">Digite seu texto aqui</textarea>
 
-  <ul>
-    <li data-testid="word-count"></li>
-    <li data-testid="character-count"></li>
-    <li data-testid="character-no-spaces-count"></li>
-    <li data-testid="number-count"></li>
-    <li data-testid="number-sum"></li>
-    <li data-testid="word-lenght-average"></li>
+  <ul class="counter-list">
+    <li class="counter" data-testid="word-count">0 palavra(s)</li>
+    <li class="counter" data-testid="character-count">0 caractere(s)</li>
+    <li class="counter" data-testid="character-no-spaces-count">0 caracteres sem espaço</li>
+    <li class="counter" data-testid="number-count">0 números</li>
+    <li class="counter" data-testid="number-sum">Soma total dos números 0</li>
+    <li class="counter" data-testid="word-lenght-average">Comprimento médio das palavras 0</li>
   </ul>
 
   <button id="reset-button">Limpar texto</button>
