--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
     <li class="counter" data-testid="character-count">0 caractere(s)</li>
     <li class="counter" data-testid="character-no-spaces-count">0 caracteres sem espaço</li>
     <li class="counter" data-testid="number-count">0 números</li>
-    <li class="counter" data-testid="number-sum">Soma total dos números 0</li>
-    <li class="counter" data-testid="word-lenght-average">Comprimento médio das palavras 0</li>
+    <li class="counter" data-testid="number-sum">Soma total dos números = 0</li>
+    <li class="counter" data-testid="word-lenght-average">Comprimento médio das palavras = 0</li>
   </ul>
 
   <button id="reset-button">Limpar texto</button>
