--- a/src/index.html
+++ b/src/index.html
@@ -3,32 +3,33 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Analizador de texto</title>
+  <title>Analisador de texto</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <header>
-    <h1>Analisador de texto</h1>
-  </header>
+  <div>
+    <header>
+      <h1>Analisador de texto</h1>
+    </header>
 
-  <textarea name="user-input">Digite seu texto aqui</textarea>
+    <textarea name="user-input">Digite seu texto aqui</textarea>
 
-  <ul class="counter-list">
-    <li class="counter" data-testid="word-count">0 palavra(s)</li>
-    <li class="counter" data-testid="character-count">0 caractere(s)</li>
-    <li class="counter" data-testid="character-no-spaces-count">0 caracteres sem espaço</li>
-    <li class="counter" data-testid="number-count">0 números</li>
-    <li class="counter" data-testid="number-sum">Soma total dos números = 0</li>
-    <li class="counter" data-testid="word-lenght-average">Comprimento médio das palavras = 0</li>
-  </ul>
+    <ul class="counter-list">
+      <li class="counter" data-testid="word-count">0 palavra(s)</li>
+      <li class="counter" data-testid="character-count">0 caractere(s)</li>
+      <li class="counter" data-testid="character-no-spaces-count">0 caracteres sem espaço</li>
+      <li class="counter" data-testid="number-count">0 números</li>
+      <li class="counter" data-testid="number-sum">Soma total dos números = 0</li>
+      <li class="counter" data-testid="word-lenght-average">Comprimento médio das palavras = 0</li>
+    </ul>
 
-  <button id="reset-button">Limpar texto</button>
+    <button id="reset-button">Limpar texto</button>
 
-  <footer>
-    <p>Desenvolvido pela estudante Débora "Nirvi" Viveiros para o Bootcamp da Laboratória em dezembro de 2023.</p>
-  </footer>
-
+    <footer>
+      <p>Desenvolvido por Débora "Nirvi" Viveiros para o Bootcamp da Laboratória em dezembro de 2023.</p>
+    </footer>
+  </div>
   <script src="index.js" type="module"></script>
 </body>
 
