--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
       <h1>Analisador de texto</h1>
     </header>
 
-    <textarea name="user-input">Digite seu texto aqui</textarea>
+    <p>
+      <textarea name="user-input"></textarea>
+    </p>
 
     <ul class="counter-list">
       <li class="counter" data-testid="word-count">0 palavra(s)</li>
