--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,15 @@
       <h1>Analisador de Texto</h1>
     </header>
 
-    <textarea name="user-input" placeholder="Digite seu texto aqui"></textarea>
+    <textarea name="user-input" placeholder="Digite seu texto aqui" text=""></textarea>
 
     <ul class="counter-list">
-      <li class="counter" data-testid="word-count">00 palavra(s)</li>
-      <li class="counter" data-testid="character-count">00 caractere(s)</li>
-      <li class="counter" data-testid="character-no-spaces-count">00 caracteres sem espaço</li>
-      <li class="counter" data-testid="number-count">00 números</li>
-      <li class="counter" data-testid="number-sum">Soma total dos números = 00</li>
-      <li class="counter" data-testid="word-lenght-average">Comprimento médio das palavras = 00</li>
+      <li class="counter" data-testid="word-count">0 palavra(s)</li>
+      <li class="counter" data-testid="character-count">0 caractere(s)</li>
+      <li class="counter" data-testid="character-no-spaces-count">0 caracteres sem espaço</li>
+      <li class="counter" data-testid="number-count">0 números</li>
+      <li class="counter" data-testid="number-sum">Soma total dos números = 0</li>
+      <li class="counter" data-testid="word-lenght-average">Comprimento médio das palavras = 0</li>
     </ul>
 
     <button id="reset-button">Limpar texto</button>
