passando no test:oas

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
       <h1>Analisador de Texto</h1>
     </header>
 
-    <textarea name="user-input" placeholder="Digite seu texto aqui" text=""></textarea>
+    <textarea name="user-input" placeholder="Digite seu texto aqui"></textarea>
 
-    <ul class="counter-list">
+    <ul>
       <li class="counter" data-testid="word-count">0 palavra(s)</li>
       <li class="counter" data-testid="character-count">0 caractere(s)</li>
       <li class="counter" data-testid="character-no-spaces-count">0 caracteres sem espaço</li>
